--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "space-tourists",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://avrahamkrol.github.io/space-journey/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "gh-pages": "^5.0.0",
     "url-loader": "^4.1.1"
   }
 }
